Done with MileStone1 -> About page fully implemented - Happy with progress

--- a/lib/discuss_web/components/layouts/navbar.html.heex
+++ b/lib/discuss_web/components/layouts/navbar.html.heex
@@ -24,7 +24,7 @@
         <a href="/topics" class="text-white/90 hover:text-white transition-colors duration-200 font-medium">
           Topics
         </a>
-        <a href="#" class="text-white/90 hover:text-white transition-colors duration-200 font-medium">
+        <a href="/about" class="text-white/90 hover:text-white transition-colors duration-200 font-medium">
           About
         </a>
       </nav>
