--- a/lib/discuss_web/components/layouts/root.html.heex
+++ b/lib/discuss_web/components/layouts/root.html.heex
@@ -16,7 +16,7 @@
   </head>
 
   <body class="bg-gray-50 text-gray-800">
-    <.navbar />
+    <.navbar current_user={@current_user} />
     <.app>
       {@inner_content}
     </.app>
